# hexapod_vstu

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config_trajectory.rviz  config_view.rviz  cv_config.yaml  joints.yaml
hexapod_control/: CMakeLists.txt  package.xml  setup.py
hexapod_control/config/: config_gazebo.rviz  joints.yaml
hexapod_control/launch/: hexapod_controller.launch  init_ros_control.launch  walk_gazebo.launch
hexapod_control/scripts/: main.py  opencv_walker.py  phantomx.py  walker.py  walker_demo.py
hexapod_control/src/: frund_gateway.cpp  frund_gateway.hpp  hexapod_control_node.cpp  hexapod_controller.cpp  hexapod_controller.hpp
hexapod_description/: package.xml
hexapod_description/config/: config_view.rviz
hexapod_description/launch/: gazebo.launch  spawn.launch  view.launch
hexapod_description/meshes/: body.stl  body_coll.stl  coxa_l.stl  coxa_l_coll.stl  coxa_r_coll.stl  thigh.stl  thigh_coll.stl  tibia_coll.stl
hexapod_description/meshes/new/: body.stl  body_coll.stl  coxa_l.stl  coxa_l_coll.stl  coxa_r.stl  coxa_r_coll.stl  thigh.stl  thigh_coll.stl  tibia.stl
hexapod_description/meshes/old/: coxa_r.stl
hexapod_description/src/: walker_demo.py
hexapod_description/urdf/: hexapod.xacro  legs.xacro  links_joints.xacro  robot_parameters.xacro
hexapod_msgs/: CMakeLists.txt  package.xml
hexapod_msgs/msg/: FrundControl.msg  GaitParams.msg
hexapod_remote_control/: CMakeLists.txt  package.xml
hexapod_remote_control/launch/: rc_web.launch
hexapod_remote_control/rc_web/: index.html  script.js  style.css
hexapod_remote_control/scripts/: server.sh
hexapod_vision/: CMakeLists.txt  package.xml
hexapod_vision/scripts/: detector.py
launch/: config.rviz  gazebo.launch  rviz.launch  spawn.launch
meshes/: tibia_l.stl  tibia_l_coll.stl  tibia_r.stl  tibia_r_coll.stl
scripts/: DRIVEMAG.TXT
src/: hexapod_control_node.cpp  opencv_walker.py  walker.py  walker_demo.py
urdf/: camera.xacro  hexapod.xacro  links_joints.xacro  robot_parameters.xacro  target.urdf
