<?xml version="1.0"?>
<package format="2">
  <name>hexapod_control</name>
  <version>0.0.0</version>
  <description>Hexapod main programs and algorithms</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>

  <license>TODO</license>

  <author email="markovalex95@gmail.com">Markov Alexey</author>
  <author email="tarasradio@mail.com">Tarasov Pavel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>hexapod_message</exec_depend>

  <export>
  </export>
</package>
