<?xml version="1.0"?>
<package format="2">
  <name>hexapod_description</name>
  <version>0.0.0</version>
  <description>Description package for hexapod model</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>

  <license>TODO</license>

  <author email="markovalex95@gmail.com">Markov Alexey</author>
  <author email="tarasradio@mail.com">Tarasov Pavel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
