<?xml version="1.0"?>
<package format="2">
  <name>hexapod_vision</name>
  <version>0.0.0</version>
  <description>Simple computer vision package for hexapod</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>

  <license>TODO</license>

  <author email="markovalex95@gmail.com">Markov Alexey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_calibration</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
